SimGrid (3.10) NOT RELEASED; urgency=low

 Java:
 * Reintegrate Java to the main archive as desynchronizing these
   package is not acceptable anymore (Java is now considered stable)
 * Bugfix: Task.setDataSize() only changed the C world, not the value 
   cached in the Java world

-- $date Da SimGrid team <simgrid-devel@lists.gforge.inria.fr>

SimGrid (3.9) stable; urgency=low

 The Grasgory release: GRAS is really dead now.

 * Complete overhaul of the internal host structures scheme.

 GRAS:
 * If you use GRAS, you should stay at SimGrid 3.5 (at most) since it
   was considered as experimental and badly maintained since then.
 * Keeping it was thus a trap to our potential users, that could take
   it instead of MSG or SMPI by mistake despite is pity state.
 * GRAS seems to have very few users (if any), and no one volunteered
   to maintain it further. It also induces a lot of XBT code (for
   portability sake), that must be maintained too.
 * For all these reasons, we killed GRAS. If someone wants to revive it
   in the future, don't cry, our git history still remembers of GRAS.

 Documentation:
 * Major overhaul. Merge our documentation again as time proved that
   splitting it was really not helping our users.
 * Further improve the developer documentation to help newcomers
   hacking on SimGrid itself. The user documentation (and in
   particular, the beginner documentation) is still in a sorry state.

 SMPI:
 * Now works on Windows too!
 * Much more extensive test suite, from MPICH

 SIMDAG:
 * Add a new loader (SD_PTG_dotload) that creates a parallel task graph
  (i.e., a DAG whose nodes are parallel tasks) from a dot file. Creates a
  dynar of SD_TASK_COMP_PAR_AMDAHL and SD_TASK_COMM_MXN_1D_BLOCK tasks.
 * Bug fix: let task be scheduled when the last dependency to be solved is
   a control dependency.
 * Remove SD_load_environment_script function.
   Use the C sg_platf function if you want to declare a platform
   programmatically.

 MSG: