@@ -4,8 +4,6 @@
 /* This program is free software; you can redistribute it and/or modify it
  * under the terms of the license (GNU LGPL) which comes with this package. */
 
-#include "simgrid_config.h" //For getline, keep that include first
-
 #include "msg_private.h"
 #include "xbt/str.h"
 #include "xbt/dynar.h"
