@@ -520,25 +520,31 @@ char *xbt_str_join_array(const char *const *strs, const char *sep)
   return res;
 }
 
-#if defined(SIMGRID_NEED_GETLINE) || defined(DOXYGEN)
 /** @brief Get a single line from the stream (reimplementation of the GNU getline)
  *
- * This is a redefinition of the GNU getline function, used on platforms where it does not exists.
+ * This is a redefinition of the GNU getline function, used on platforms where
+ * it does not exists.
  *
- * getline() reads an entire line from stream, storing the address of the buffer
- * containing the text into *buf.  The buffer is null-terminated and includes
- * the newline character, if one was found.
+ * xbt_getline() reads an entire line from stream, storing the address of the
+ * buffer containing the text into *buf.  The buffer is null-terminated and
+ * includes the newline character, if one was found.
  *
- * If *buf is NULL, then getline() will allocate a buffer for storing the line,
- * which should be freed by the user program.  Alternatively, before calling getline(),
- * *buf can contain a pointer to a malloc()-allocated buffer *n bytes in size.  If the buffer
- * is not large enough to hold the line, getline() resizes it with realloc(), updating *buf and *n
- * as necessary.  In either case, on a successful call, *buf and *n will be updated to
- * reflect the buffer address and allocated size respectively.
+ * If *buf is NULL, then xbt_getline() will allocate a buffer for storing the
+ * line, which should be freed by the user program.
+ *
+ * Alternatively, before calling xbt_getline(), *buf can contain a pointer to a
+ * malloc()-allocated buffer *n bytes in size.  If the buffer is not large
+ * enough to hold the line, xbt_getline() resizes it with realloc(), updating
+ * *buf and *n as necessary.
+ *
+ * In either case, on a successful call, *buf and *n will be updated to reflect
+ * the buffer address and allocated size respectively.
  */
-long getline(char **buf, size_t * n, FILE * stream)
+ssize_t xbt_getline(char **buf, size_t * n, FILE * stream)
 {
-
+#if !defined(SIMGRID_NEED_GETLINE)
+  return getline(buf, n, stream);
+#else
   size_t i;
   int ch;
 
@@ -570,9 +576,8 @@ long getline(char **buf, size_t * n, FILE * stream)
   (*buf)[i] = '\0';
 
   return (ssize_t) i;
+#endif
 }
-
-#endif                          /* HAVE_GETLINE */
 
 /*
  * Diff related functions
