@@ -1,9 +1,12 @@
 SimGrid (3.10) NOT RELEASED; urgency=low
 
+ XBT:
+ * Our own implementation of getline is renamed xbt_getline.
+
  Java:
  * Reintegrate Java to the main archive as desynchronizing these
    package is not acceptable anymore (Java is now considered stable)
- * Bugfix: Task.setDataSize() only changed the C world, not the value 
+ * Bugfix: Task.setDataSize() only changed the C world, not the value
    cached in the Java world
 
 -- $date Da SimGrid team <simgrid-devel@lists.gforge.inria.fr>
